@@ -509,7 +509,7 @@ void
 CommandLineOptions::print_version() const
 {
   std::cout
-    << "xboxdrv 0.4.7\n"
+    << "xboxdrv 0.4.8\n"
     << "Copyright (C) 2008 Ingo Ruhnke <grumbel@gmx.de>\n"
     << "License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>\n"
     << "This is free software: you are free to change and redistribute it.\n"
